初步完成了mulitupload组件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2992 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
+++ b/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
@@ -3,4 +3,5 @@
 		<input type="button" onclick="removeAll();" value="delete all"/>
 		<input type="hidden" name="filecounter" id="filecounter" value="0"/>
 		<div id="files"/>
+		<span jwcid="@RenderBody"/>
 </span>
