从MulitUploadFrom页面中抽象出使用MulitUpload组件页面可以通用的方法，到 接口IMulitUpload中
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2996 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/mulitupload/AForm.page
+++ b/src/main/webapp/mulitupload/AForm.page
@@ -12,6 +12,14 @@
     <binding value="listener:doSaveEntityAction" name="success"/>
   </component>
   
+  <component type="TextField" id="nameField">
+    <binding name="value" value="entity.name"/>
+  </component>
+  
+  <component type="TextField" id="cnNameField">
+    <binding name="value" value="entity.cnName"/>
+  </component>
+  
   <component type="corner:MulitUpload" id="updateField">
     <binding name="value" value="files"/>
   </component>
