添加了两个用于操作的图片按钮
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3000 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
+++ b/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
@@ -1,5 +1,5 @@
 <span jwcid="$content$">
-		<input type="button" onclick="add();" value="add file"/>
+		<img src="" onclick="add();" alt="add" border="0" id="mulitupload_add"/>
 		<input type="button" onclick="removeAll();" value="delete all"/>
 		<input type="hidden" name="filecounter" id="filecounter" value="0"/>
 		<div id="files"/>
