在mulitupload组件中添加了增加和删除的图片，缺少一个全部删除的图片，目前 采用直接写死图片URL的方法
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3018 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
+++ b/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
@@ -1,5 +1,5 @@
 <span jwcid="$content$">
-		<img src="" onclick="add();" alt="add" border="0" id="mulitupload_add"/>
+		<img src="/assets/static/corner/orm/tapestry/component/mulitupload/add.png" onclick="add();" alt="add" border="0" id="mulitupload_add"/>
 		<input type="button" onclick="removeAll();" value="delete all"/>
 		<input type="hidden" name="filecounter" id="filecounter" value="0"/>
 		<div id="files"/>
