增加了全部删除的图片
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3062 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
+++ b/src/main/java/corner/orm/tapestry/component/mulitupload/MulitUpload.html
@@ -1,6 +1,6 @@
 <span jwcid="$content$">
 		<img src="/assets/static/corner/orm/tapestry/component/mulitupload/add.png" onclick="add();" alt="add" border="0" id="mulitupload_add"/>
-		<input type="button" onclick="removeAll();" value="delete all"/>
+		<img src="/assets/static/corner/orm/tapestry/component/mulitupload/deleteall.png" onclick="removeAll();" alt="delete all" border="0" id="mulitupload_deleteall"/>
 		<input type="hidden" name="filecounter" id="filecounter" value="0"/>
 		<div id="files"/>
 		<span jwcid="@RenderBody"/>
