--- a/src/main/webapp/gainPoint/AForm.page
+++ b/src/main/webapp/gainPoint/AForm.page
@@ -12,9 +12,9 @@
     <binding value="listener:doCancelEntityAction" name="cancel"/>
     <binding value="listener:false" name="focus"/>
   </component>
-  <component type="corner:CoolestPicker" id="nameField">
-    <binding value="message:name" name="displayName"/>
-    <binding name="currentDate" value="false" />
+  <component type="corner:AutoEva" id="nameField">
+    <binding name="queryClassName" value="literal:corner.demo.model.one.A" />
+    <binding name="labelFields" value="literal:password" />
     <binding value="ognl:entity.name" name="value"/>
   </component>
 </page-specification>
