多组建模板更新测试，成功
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3129 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/prototype/BForm.page
+++ b/src/main/webapp/prototype/BForm.page
@@ -19,11 +19,16 @@
     <binding value="message:name" name="displayName"/>
     <binding name="queryClassName" value="literal:corner.demo.model.one2many.A"/>
     <binding name="labelFields" value="literal:name"/>
-    <binding name="updateFields" value="literal:{cnNameField:returnTemplates_0}"/>
-    <binding name="returnTemplates" value="literal:{id$name:'测试1:%1$s\n测试2:%2$s'}"/>
+    <binding name="updateFields" value="literal:{cnNameField:returnTemplates_0,cncnNameField:returnTemplates_1}"/>
+    <binding name="returnTemplates" value="literal:{id$name:'测试1:%1$s\n测试2:%2$s',name:'测试3:%1$s'}"/>
     <binding value="ognl:entity.name" name="value"/>
   </component>
   <component type="TextArea" id="cnNameField">
+    <binding value="message:cnName" name="displayName"/>
+    <binding value="translator:string" name="translator"/>
+    <binding value="ognl:entity.cnName" name="value"/>
+  </component>
+  <component type="TextArea" id="cncnNameField">
     <binding value="message:cnName" name="displayName"/>
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.cnName" name="value"/>
