--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -1,30 +1,18 @@
 <span jwcid="$content$">
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr>
-			<td>
-				<table width="99%" border="0" cellspacing="0" cellpadding="0">
-				  <tr>
-                	<td width="5%">
-					  <div align="center">
-						<input type="checkbox" name="Input" jwcid="isEditBlobField" />
-					  </div></td>
-					<td width="95%"><input type="file" name="blobData" jwcid="blobDataField"  /></td>
-				  </tr>
-				</table>
-			</td>
-		</tr>
-		<tr>
-			<td>
+			<td width="5%">
 				<span jwcid="@If" condition="ognl:ImageFile eq true">
 					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}">
-						<img jwcid="@Image" id="ImageField" class="ognl:imgInputClass" width="ognl:imgWidth" height="ognl:imgHeight" image="ognl:blobAsset" border="ognl:imgBorder"/>
-					</a>
-				</span>
+						<img jwcid="@Image" id="ImageField" class="ognl:imgInputClass" width="ognl:imgWidth" height="ognl:imgHeight" image="ognl:blobAsset" border="ognl:imgBorder"/>					</a>				</span>
 				<span jwcid="@Else">
 					<span jwcid="@If" condition="ognl:blobEntity.blobData != null">
-					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><span jwcid="@Insert" value="ognl:Msg">查看</span></a>
-					</span>
-				</span>
+					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><span jwcid="@Insert" value="ognl:Msg">查看</span></a></span>
+                </span>
+			</td>
+			<td width="5%"><input type="checkbox" name="Input" jwcid="isEditBlobField" /></td>
+			<td>
+				<input type="file" name="blobData" jwcid="blobDataField"  />
 			</td>
 		</tr>
 	</table>
