增加jasperEntityLink/Service,增加DatabaseAssetFactory但功能未写
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3393 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonForm.page
+++ b/src/main/webapp/upload/APersonForm.page
@@ -32,6 +32,7 @@
     <binding name="imageFile" value="true"/>
     <!--binding name="fileValidators" value="validators:required"/-->
     <binding name="fileValidators" value="validators:pictureSize={10:10},fileType={.exe;.jpg}"/>
+    <binding name="fileInputClass" value="literal:input-form-99" />
     <binding name="imgInputClass" value="literal:test-style"/>
     <binding name="imgWidth" value="literal:50"/>
     <binding name="imgHeight" value="literal:100"/>
