修改子报表传递方法
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3435 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/jasper/main.jrxml
+++ b/src/test/resources/jasper/main.jrxml
@@ -26,7 +26,11 @@
 	<parameter name="jasperSubReport" isForPrompting="true" class="net.sf.jasperreports.engine.JasperReport"/>
 	<parameter name="subdataSource" isForPrompting="true" class="net.sf.jasperreports.engine.JRDataSource"/>
 	<parameter name="jasperSubReportA" isForPrompting="true" class="java.net.URL"/>
-	<parameter name="subdataSourceA" isForPrompting="true" class="net.sf.jasperreports.engine.JRDataSource"/>
+<!--	<parameter name="subdataSourceA" isForPrompting="true" class="net.sf.jasperreports.engine.JRDataSource"/>-->
+
+	<field name="subdataSourceA" class="net.sf.jasperreports.engine.JRDataSource">
+		<fieldDescription><![CDATA[ognl:subdataSourceA]]></fieldDescription>
+	</field>
 
 		<background>
 			<band height="500"  isSplitAllowed="true" >
@@ -47,7 +51,7 @@
 						width="406"
 						height="186"
 						key="subreport-3"/>
-					<dataSourceExpression><![CDATA[$P{subdataSourceA}]]></dataSourceExpression>
+					<dataSourceExpression><![CDATA[$F{subdataSourceA}]]></dataSourceExpression>
 					<subreportExpression  class="java.net.URL"><![CDATA[$P{jasperSubReportA}]]></subreportExpression>
 				</subreport>
 				<line direction="TopDown">
