修改了测试用力
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3490 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/jasper/test.jrxml
+++ b/src/test/resources/jasper/test.jrxml
@@ -22,6 +22,7 @@
 	<import value="java.util.*" />
 	<import value="net.sf.jasperreports.engine.*" />
 	<import value="net.sf.jasperreports.engine.data.*" />
+	<parameter name="a" isForPrompting="true" class="java.lang.String"/>
 
 
 		<background>
@@ -43,7 +44,7 @@
 					<textElement>
 						<font fontName="宋体" pdfFontName="STSong-Light" size="24" isBold="true" isItalic="true" isPdfEmbedded ="true" pdfEncoding ="UniGB-UCS2-H" isStrikeThrough="false" />
 					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA["大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停"]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.String"><![CDATA[$P{a}]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement
@@ -57,6 +58,19 @@
 						<font/>
 					</textElement>
 				<text><![CDATA[不會變動的文字]]></text>
+				</staticText>
+				<staticText>
+					<reportElement
+						x="89"
+						y="158"
+						width="203"
+						height="75"
+						key="staticText-3"/>
+					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
+					<textElement>
+						<font/>
+					</textElement>
+				<text><![CDATA["大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？大家好，今天你做了什么？说高高山上有条藤，条条藤上挂铜铃，风吹藤动铜铃动，风停藤停铜铃停"]]></text>
 				</staticText>
 			</band>
 		</title>
