增加前台判断
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3500 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/AForm.page
+++ b/src/main/webapp/gainPoint/AForm.page
@@ -12,9 +12,11 @@
     <binding value="listener:doCancelEntityAction" name="cancel"/>
     <binding value="listener:false" name="focus"/>
   </component>
-  <component type="corner:AutoEva" id="nameField">
+  <component type="corner:AssAC" id="nameField">
     <binding name="queryClassName" value="literal:corner.demo.model.one.A" />
     <binding name="labelFields" value="literal:password" />
     <binding value="ognl:entity.name" name="value"/>
+    <binding name="validators" value="validators:relationAss"/>
+    <binding name="showField" value="literal:chnName"/>
   </component>
 </page-specification>
