增加页面持久化id的方法，firefox没有问题。ie下可以提交但无法回显
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3507 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/gainPointForm.page
+++ b/src/main/webapp/gainPoint/gainPointForm.page
@@ -21,7 +21,7 @@
     <binding value="ognl:entity.name" name="value"/>
   </component>
   <component type="corner:GainPoint" id="GainPointField">
-    <binding value="literal:id,name,cnName" name="showPropertys"/>
+    <binding value="literal:poid,name,cnName" name="showPropertys"/>
     <binding value="literal:corner.demo.model.one2many.B" name="entityClass"/>
     <binding value="literal:t" name="tableId"/>
     <binding value="source" name="source"/>
