增加svnkitService模型，准备增加业务逻辑
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3559 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/AForm.page
+++ b/src/main/webapp/gainPoint/AForm.page
@@ -12,11 +12,17 @@
     <binding value="listener:doCancelEntityAction" name="cancel"/>
     <binding value="listener:false" name="focus"/>
   </component>
-  <component type="corner:AssAC" id="nameField">
+  <component type="corner:AssAC" id="nameField12231">
     <binding name="queryClassName" value="literal:corner.demo.model.one.A" />
     <binding name="labelFields" value="literal:password" />
     <binding value="ognl:entity.name" name="value"/>
     <binding name="validators" value="validators:relationAss"/>
     <binding name="showField" value="literal:chnName"/>
+  </component>
+  <component type="TextField" id="nameField">
+    <binding value="message:name" name="displayName"/>
+    <binding value="translator:string" name="translator"/>
+    <binding value="ognl:entity.name" name="value"/>
+    <binding name="validators" value="validators:required"/>    
   </component>
 </page-specification>
