--- a/src/main/webapp/gainPoint/AList.page
+++ b/src/main/webapp/gainPoint/AList.page
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 
-<page-specification class="corner.orm.tapestry.page.PoListPage">
+<page-specification class="corner.demo.page.gainPoint.AListPage">
   <description>corner.demo.model.one2many.A Form Page</description>
   <bean class="org.apache.tapestry.valid.ValidationDelegate" name="delegate"/>
   <property initial-value="new corner.demo.model.one2many.A()" name="entity"/>
