增加弹出显示不同功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3597 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/AForm.page
+++ b/src/main/webapp/gainPoint/AForm.page
@@ -29,6 +29,7 @@
   <component type="corner:VInsert" id="nameVInsertField">
     <binding value="literal:name" name="showProperty"/>
     <binding value="literal:flags" name="jsonName"/>
+    <binding value="literal:flags2" name="jsonOtherName"/>
     <binding value="ognl:entity.name" name="value"/>
   </component>
   
