增加页面输入返回功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3619 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.page
+++ b/src/main/webapp/widget/QueryDialogTest.page
@@ -23,4 +23,8 @@
   <component type="corner:PageQueryDialog" id="dialog2">
 	  <binding value="literal:widget/SelectionListPage" name="queryPageName"/>
   </component>
+  <component type="corner:WindowQueryDialog" id="popText">
+      <binding value="literal:widget/pop" name="queryPageName"/>
+      <binding value="ognl:false" name="autoReSize"/>
+  </component>
 </page-specification>
