修改了原始的tip的展示,产生更好的tip展示效果
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3621 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/insert/prototip/prototip.css
+++ b/src/main/java/corner/orm/tapestry/component/insert/prototip/prototip.css
@@ -16,3 +16,20 @@
 .darktip .title, .darktip .content { border: 5px solid #999999; padding: 5px; }
 .darktip .title { border-bottom: none; background: #606060; color: #fff; font: italic 17px Georgia, serif; }
 .darktip .content { border-top: none; background: #808080; color: #fff; font: 11px Arial, Helvetica, sans-serif; }
+
+.commentbox{
+background-color: #ececec;
+width: 450px;
+padding: 10px;
+
+}
+
+.commentfooter{
+background: url(arrow.gif) 20px 0 no-repeat; /*20px 0 equals horizontal and vertical position of arrow. Adjust as desired (ie: 20px -5px).*/
+padding-left: 58px;
+padding-top: 1px;
+margin-bottom: 2em;
+font-size: 90%;
+color: #4A4A4A;
+}
+
