可以设置处理弹出win窗口事件的ID
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3627 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.page
+++ b/src/main/webapp/widget/QueryDialogTest.page
@@ -26,5 +26,6 @@
   <component type="corner:WindowQueryDialog" id="popText">
       <binding value="literal:widget/pop" name="queryPageName"/>
       <binding value="ognl:false" name="autoReSize"/>
+      <binding value="literal:touch" name="eventHeaderId"/>
   </component>
 </page-specification>
