增加VersionCommentBox组建用于svn统一提交
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3633 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.page
+++ b/src/main/webapp/widget/QueryDialogTest.page
@@ -23,9 +23,10 @@
   <component type="corner:PageQueryDialog" id="dialog2">
 	  <binding value="literal:widget/SelectionListPage" name="queryPageName"/>
   </component>
-  <component type="corner:WindowQueryDialog" id="popText">
+  <component type="corner:VersionCommentBox" id="popText">
       <binding value="literal:widget/pop" name="queryPageName"/>
-      <binding value="ognl:false" name="autoReSize"/>
-      <binding value="literal:touch" name="eventHeaderId"/>
+      <binding value="ognl:svnAuthorValue" name="svnAuthorValue"/>
+      <binding value="ognl:svnLog" name="svnLog"/>
+      <binding value="ognl:svnCommit" name="svnCommit"/>
   </component>
 </page-specification>
